--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,13 @@ spring:
     jpa:
       repositories.enabled: true
 
+
 frontend:
   url: ${FRONTEND_API_URL:"http://localhost:4200"}
+
+security:
+  jwt:
+    token:
+      secret-key: ${SECRET_KEY:wipjd03kmv[wh567gmcvf2p0fh<niyedjgvdckjhkkhVvj;'\986546&*6865&^}
+      token-duration-minutes: ${TOKEN_DURATION_MINUTES:600}
 
